--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         </div>
       </section>
       <!-- SECTION OF WORK-->
-      <!-- <section class="section-work">
+      <section class="section-work">
         <div class="section-work__center container">
           <h2 class="section-work__title">Чим ми займаємося</h2>
           <ul class="section-work__list">
@@ -191,9 +191,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- SECTION OF TEAM-->
-      <!-- <section class="section-team">
+      <section class="section-team">
         <div class="section-team__center container">
           <h2 class="section-team__title">Наша команда</h2>
           <ul class="section-team__list">
@@ -384,9 +384,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- SECTION OF CUSTOMERS -->
-      <!-- <section class="section-customers">
+      <section class="section-customers">
         <div class="section-customers__center container">
           <h2 class="section-customers__title">Постійні клієнти</h2>
           <ul class="section-customers__list">
@@ -434,10 +434,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- FOOTER -->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer-block container">
         <div class="footer-address">
           <a class="logo footer-logo" href="./index.html"
@@ -532,7 +532,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- MODAL WINDOW -->
     <!-- <div class="backdrop is-hidden" data-modal>
       <div class="modal">
