--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
       </div>
     </header>
     <main>
-
       <!-- SECTION OF CAP -->
       <section class="section-cap">
         <div class="section-cap__container container">
@@ -439,79 +438,80 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-block container">
-        <div class="footer-address">
-          <a class="logo footer-logo" href="./index.html"
-            >Web<span class="logo__label">Studio</span>
-          </a>
+        <div class="footer-flex">
+          <div class="footer-address">
+            <a class="logo footer-logo" href="./index.html"
+              >Web<span class="logo__label">Studio</span>
+            </a>
 
-          <address class="footer-contacts">
-            <ul class="footer-contacts__list">
-              <li class="footer-contacts__item">
-                <a
-                  class="footer-contacts__map"
-                  href="https://www.google.com.ua/maps"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >м. Київ, пр-т Лесі Українки, 26
-                </a>
-              </li>
-              <li class="footer-contacts__item">
-                <a
-                  class="footer-contacts__link"
-                  href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="footer-contacts__item">
-                <a class="footer-contacts__link" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-          </address>
+            <address class="footer-contacts">
+              <ul class="footer-contacts__list">
+                <li class="footer-contacts__item">
+                  <a
+                    class="footer-contacts__map"
+                    href="https://www.google.com.ua/maps"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >м. Київ, пр-т Лесі Українки, 26
+                  </a>
+                </li>
+                <li class="footer-contacts__item">
+                  <a
+                    class="footer-contacts__link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer-contacts__item">
+                  <a class="footer-contacts__link" href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer-links">
+            <p class="footer-links__text">ПРИЄДНУЙТЕСЬ</p>
+
+            <a
+              class="footer-links__url"
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              <svg class="instagram-one">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+            <a
+              class="footer-links__url"
+              href="https://twitter.com/"
+              target="_blank"
+            >
+              <svg class="twitter-one">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg>
+            </a>
+            <a
+              class="footer-links__url"
+              href="https://www.facebook.com/"
+              target="_blank"
+            >
+              <svg class="facebook-one">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </a>
+            <a
+              class="footer-links__url"
+              href="https://www.linkedin.com/"
+              target="_blank"
+            >
+              <svg class="linkedin-one">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg>
+            </a>
+          </div>
         </div>
-
-        <div class="footer-links">
-          <p class="footer-links__text">ПРИЄДНУЙТЕСЬ</p>
-
-          <a
-            class="footer-links__url"
-            href="https://www.instagram.com/"
-            target="_blank"
-          >
-            <svg class="instagram-one">
-              <use href="./images/icons.svg#instagram"></use>
-            </svg>
-          </a>
-          <a
-            class="footer-links__url"
-            href="https://twitter.com/"
-            target="_blank"
-          >
-            <svg class="twitter-one">
-              <use href="./images/icons.svg#twitter"></use>
-            </svg>
-          </a>
-          <a
-            class="footer-links__url"
-            href="https://www.facebook.com/"
-            target="_blank"
-          >
-            <svg class="facebook-one">
-              <use href="./images/icons.svg#facebook"></use>
-            </svg>
-          </a>
-          <a
-            class="footer-links__url"
-            href="https://www.linkedin.com/"
-            target="_blank"
-          >
-            <svg class="linkedin-one">
-              <use href="./images/icons.svg#linkedin"></use>
-            </svg>
-          </a>
-        </div>
-
         <div class="footer-subscribe">
           <form class="footer-subscribe__form">
             <p class="footer-subscribe__text">Підпишіться на розсилку</p>
