--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
       </div>
     </footer>
     <!-- MODAL WINDOW -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button data-modal-close class="close-form">
           <svg class="icon-close-black">
@@ -591,7 +591,7 @@
           <button class="button-submit" type="submit">Відправити</button>
         </form>
       </div>
-    </div> -->
+    </div>
 
     <script>
       (() => {
