--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="UTF-8" />
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Студія</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +28,66 @@
         <a class="logo" href="./index.html"
           >Web<span class="logo__label">Studio</span>
         </a>
+        <button
+          class="menu-button"
+          type="button"
+          aria-expanded="false"
+          aria-controls="menu-container"
+          data-menu-button
+        >
+          <svg width="40" height="40" aria-label="Перемикач мобільного меню">
+            <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
+            <use class="icon-close" href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <div class="menu-container" id="menu-container" data-menu>
+          <ul class="menu-container__list">
+            <li class="menu-container__item">
+              <a href="./index.html" class="menu-container__link">Студія</a>
+            </li>
+            <li class="menu-container__item">
+              <a
+                class="menu-container__link menu-container__link--current"
+                href="./portfolio.html"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="menu-container__item">
+              <a class="menu-container__link" href="#">Контакти</a>
+            </li>
+          </ul>
+          <ul class="menu-contacts">
+            <li class="menu-contacts__item">
+              <a
+                class="menu-contacts__link menu-contacts__link--phone"
+                href="tel:+380961111111"
+              >
+                +38 096 111 11 11
+              </a>
+            </li>
+            <li class="menu-contacts__item">
+              <a class="menu-contacts__link" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </li>
+          </ul>
 
+          <ul class="menu-social">
+            <li class="menu-social__item">
+              <a class="menu-social__link" href="#">Instagram</a>
+            </li>
+            <li class="menu-social__item">
+              <a class="menu-social__link" href="#">Twitter</a>
+            </li>
+            <li class="menu-social__item">
+              <a class="menu-social__link" href="#">Facebook</a>
+            </li>
+            <li class="menu-social__item">
+              <a class="menu-social__link" href="#">LinkedIn</a>
+            </li>
+          </ul>
+        </div>
+        <!------------------------------------------------- END of MENU-CONTAINER -------------------------------------------------->
         <nav class="main-nav">
           <ul class="main-nav__list">
             <li class="main-nav__item main-nav__item--margin">
@@ -331,98 +394,115 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer-block container">
-        <div class="footer-address">
-          <a class="logo footer-logo" href="./index.html"
-            >Web<span class="logo__label">Studio</span>
-          </a>
+        <div class="footer-flex">
+          <div class="footer-address">
+            <a class="logo footer-logo" href="./index.html"
+              >Web<span class="logo__label">Studio</span>
+            </a>
 
-          <address class="footer-contacts">
-            <ul class="footer-contacts__list">
-              <li class="footer-contacts__item">
-                <a
-                  class="footer-contacts__map"
-                  href="https://www.google.com.ua/maps"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >м. Київ, пр-т Лесі Українки, 26
-                </a>
-              </li>
-              <li class="footer-contacts__item">
-                <a
-                  class="footer-contacts__link"
-                  href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="footer-contacts__item">
-                <a class="footer-contacts__link" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-          </address>
+            <address class="footer-contacts">
+              <ul class="footer-contacts__list">
+                <li class="footer-contacts__item">
+                  <a
+                    class="footer-contacts__map"
+                    href="https://www.google.com.ua/maps"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >м. Київ, пр-т Лесі Українки, 26
+                  </a>
+                </li>
+                <li class="footer-contacts__item">
+                  <a
+                    class="footer-contacts__link"
+                    href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer-contacts__item">
+                  <a class="footer-contacts__link" href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="footer-links">
+            <p class="footer-links__text">ПРИЄДНУЙТЕСЬ</p>
+
+            <a
+              class="footer-links__url"
+              href="https://www.instagram.com/"
+              target="_blank"
+            >
+              <svg class="instagram-one">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+            <a
+              class="footer-links__url"
+              href="https://twitter.com/"
+              target="_blank"
+            >
+              <svg class="twitter-one">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg>
+            </a>
+            <a
+              class="footer-links__url"
+              href="https://www.facebook.com/"
+              target="_blank"
+            >
+              <svg class="facebook-one">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </a>
+            <a
+              class="footer-links__url"
+              href="https://www.linkedin.com/"
+              target="_blank"
+            >
+              <svg class="linkedin-one">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg>
+            </a>
+          </div>
         </div>
-
-        <div class="footer-links">
-          <p class="footer-links__text">ПРИЄДНУЙТЕСЬ</p>
-
-          <a
-            class="footer-links__url"
-            href="https://www.instagram.com/"
-            target="_blank"
-          >
-            <svg class="instagram-one">
-              <use href="./images/icons.svg#instagram"></use>
-            </svg>
-          </a>
-          <a
-            class="footer-links__url"
-            href="https://twitter.com/"
-            target="_blank"
-          >
-            <svg class="twitter-one">
-              <use href="./images/icons.svg#twitter"></use>
-            </svg>
-          </a>
-          <a
-            class="footer-links__url"
-            href="https://www.facebook.com/"
-            target="_blank"
-          >
-            <svg class="facebook-one">
-              <use href="./images/icons.svg#facebook"></use>
-            </svg>
-          </a>
-          <a
-            class="footer-links__url"
-            href="https://www.linkedin.com/"
-            target="_blank"
-          >
-            <svg class="linkedin-one">
-              <use href="./images/icons.svg#linkedin"></use>
-            </svg>
-          </a>
-        </div>
-
         <div class="footer-subscribe">
           <form class="footer-subscribe__form">
             <p class="footer-subscribe__text">Підпишіться на розсилку</p>
-
-            <input
-              class="footer-subscribe__input"
-              type="email"
-              name="email"
-              placeholder="E-mail"
-            />
-            <button class="footer-subscribe__button" type="submit">
-              Підписатися
-              <svg class="footer-subscribe__icon">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg>
-            </button>
+            <div class="footer-subscribe__flex">
+              <input
+                class="footer-subscribe__input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+              <button class="footer-subscribe__button" type="submit">
+                Підписатися
+                <svg class="footer-subscribe__icon">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </div>
           </form>
         </div>
       </div>
     </footer>
+    <script>
+      (() => {
+        document
+          .querySelector(".js-speaker-form")
+          .addEventListener("submit", (e) => {
+            e.preventDefault();
+
+            new FormData(e.currentTarget).forEach((value, name) =>
+              console.log(`${name}: ${value}`)
+            );
+          });
+      })();
+    </script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
