--- a/portfolio.html
+++ b/portfolio.html
@@ -168,12 +168,28 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret1.jpg"
-                    alt="картинка веб-сайт"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/ret1-480.jpg    1x,
+                        ./images/ret1-480@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret1-768.jpg    1x,
+                        ./images/ret1-768@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret1-1200.jpg    1x,
+                        ./images/ret1-1200@2x.jpg 2x
+                      " />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret1-480.jpg"
+                      alt="картинка веб-сайт"
+                      width="370"
+                  /></picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -192,12 +208,32 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret2.jpg"
-                    alt="постер"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/ret2-480.jpg    1x,
+                        ./images/ret2-480@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      srcset="
+                        ./images/ret2-768.jpg    1x,
+                        ./images/ret2-768@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      srcset="
+                        ./images/ret2-1200.jpg    1x,
+                        ./images/ret2-1200@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret2-480.jpg"
+                      alt="постер"
+                      width="370"
+                    />
+                  </picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -218,12 +254,28 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret3.jpg"
-                    alt="картинка Seafood"
-                    width="370"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/ret3-480.jpg    1x,
+                        ./images/ret3-480@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret3-768.jpg    1x,
+                        ./images/ret3-768@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret3-1200.jpg    1x,
+                        ./images/ret3-1200@2x.jpg 2x
+                      " />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret3-480.jpg"
+                      alt="картинка Seafood"
+                      width="370"
+                  /></picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -242,12 +294,28 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret4.jpg"
-                    alt="картинка навушники"
-                    width="370"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/ret4-480.jpg    1x,
+                        ./images/ret4-480@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret4-768.jpg    1x,
+                        ./images/ret4-768@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret4-1200.jpg    1x,
+                        ./images/ret4-1200@2x.jpg 2x
+                      " />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret4-480.jpg"
+                      alt="картинка навушники"
+                      width="370"
+                  /></picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -266,12 +334,28 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret5.jpg"
-                    alt="картинка коробки"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/ret5-480.jpg    1x,
+                        ./images/ret5-480@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret5-768.jpg    1x,
+                        ./images/ret5-768@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret5-1200.jpg    1x,
+                        ./images/ret5-1200@2x.jpg 2x
+                      " />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret5-480.jpg"
+                      alt="картинка коробки"
+                      width="370"
+                  /></picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -290,12 +374,28 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret6.jpg"
-                    alt="картинка комп'ютера"
-                    width="370"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/ret6-480.jpg    1x,
+                        ./images/ret6-480@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret6-768.jpg    1x,
+                        ./images/ret6-768@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret6-1200.jpg    1x,
+                        ./images/ret6-1200@2x.jpg 2x
+                      " />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret6-480.jpg"
+                      alt="картинка комп'ютера"
+                      width="370"
+                  /></picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -316,12 +416,28 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret7.jpg"
-                    alt="картинка книги"
-                    width="370"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/ret7-480.jpg    1x,
+                        ./images/ret7-480@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret7-768.jpg    1x,
+                        ./images/ret7-768@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret7-1200.jpg    1x,
+                        ./images/ret7-1200@2x.jpg 2x
+                      " />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret7-480.jpg"
+                      alt="картинка книги"
+                      width="370"
+                  /></picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -342,12 +458,28 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret8.jpg"
-                    alt="картинка етикетки"
-                    width="370"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/ret8-480.jpg    1x,
+                        ./images/ret8-480@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret8-768.jpg    1x,
+                        ./images/ret8-768@2x.jpg 2x
+                      " />
+                    <source
+                      srcset="
+                        ./images/ret8-1200.jpg    1x,
+                        ./images/ret8-1200@2x.jpg 2x
+                      " />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret8-480.jpg"
+                      alt="картинка етикетки"
+                      width="370"
+                  /></picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -366,12 +498,32 @@
             <li class="section-project__item">
               <a class="section-project__url" href="#">
                 <div class="section-project__wrapper">
-                  <img
-                    class="section-project__img"
-                    src="./images/ret9.jpg"
-                    alt="картинка ноутбука"
-                    width="370"
-                  />
+                  <picture
+                    ><source
+                      srcset="
+                        ./images/ret9-480.jpg    1x,
+                        ./images/ret9-480@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      srcset="
+                        ./images/ret9-768.jpg    1x,
+                        ./images/ret9-768@2x.jpg 2x
+                      "
+                    />
+                    <source
+                      srcset="
+                        ./images/ret9-1200.jpg    1x,
+                        ./images/ret9-1200@2x.jpg 2x
+                      "
+                    />
+                    <img
+                      class="section-project__img"
+                      src="./images/ret9-480.jpg"
+                      alt="картинка ноутбука"
+                      width="370"
+                    />
+                  </picture>
                   <div class="section-project__overlay">
                     <p class="section-project__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
