--- a/index.html
+++ b/index.html
@@ -197,12 +197,38 @@
           <h2 class="section-team__title">Наша команда</h2>
           <ul class="section-team__list">
             <li class="section-team__item">
-              <img
-                class="section-team__img"
-                src="./images/foto1.jpg"
-                alt="Ігор Дем'яненко"
-                width="270"
-              />
+              <picture
+                ><source
+                  srcset="
+                    ./images/foto1-480.jpg    1x,
+                    ./images/foto1-480@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="max-width: 767px"
+                />
+                <source
+                  srcset="
+                    ./images/foto1-768.jpg    1x,
+                    ./images/foto1-768@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="min-width: 768px"
+                />
+                <source
+                  srcset="
+                    ./images/foto1-1200.jpg    1x,
+                    ./images/foto1-1200@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="min-width: 1200px"
+                />
+                <img
+                  class="section-team__img"
+                  src="./images/foto1-480.jpg"
+                  alt="Ігор Дем'яненко"
+                  width="270"
+                />
+              </picture>
               <h3 class="section-team__name">Ігор Дем'яненко</h3>
               <p class="section-team__text">Product Designer</p>
 
@@ -244,12 +270,39 @@
               </a>
             </li>
             <li class="section-team__item">
-              <img
-                class="section-team__img"
-                src="./images/foto2.jpg"
-                alt="Ольга Рєпіна"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/foto2-480.jpg    1x,
+                    ./images/foto2-480@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="max-width: 767px"
+                />
+                <source
+                  srcset="
+                    ./images/foto2-768.jpg    1x,
+                    ./images/foto2-768@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="min-width: 768px"
+                />
+                <source
+                  srcset="
+                    ./images/foto2-1200.jpg    1x,
+                    ./images/foto2-1200@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="min-width: 1200px"
+                />
+                <img
+                  class="section-team__img"
+                  src="./images/foto2-480.jpg"
+                  alt="Ольга Рєпіна"
+                  width="270"
+                />
+              </picture>
+
               <h3 class="section-team__name">Ольга Рєпіна</h3>
               <p class="section-team__text">Frontend Developer</p>
               <a
@@ -290,12 +343,39 @@
               </a>
             </li>
             <li class="section-team__item">
-              <img
-                class="section-team__img"
-                src="./images/foto3.jpg"
-                alt="Микола Тарасов"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/foto3-480.jpg    1x,
+                    ./images/foto3-480@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="max-width: 767px"
+                />
+                <source
+                  srcset="
+                    ./images/foto3-768.jpg    1x,
+                    ./images/foto3-768@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="min-width: 768px"
+                />
+                <source
+                  srcset="
+                    ./images/foto3-1200.jpg    1x,
+                    ./images/foto3-1200@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="min-width: 1200px"
+                />
+                <img
+                  class="section-team__img"
+                  src="./images/foto3-480.jpg"
+                  alt="Микола Тарасов"
+                  width="270"
+                />
+              </picture>
+
               <h3 class="section-team__name">Микола Тарасов</h3>
               <p class="section-team__text">Marketing</p>
               <a
@@ -336,12 +416,39 @@
               </a>
             </li>
             <li class="section-team__item">
-              <img
-                class="section-team__img"
-                src="./images/foto4.jpg"
-                alt="Михайло Єрмаков"
-                width="270"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/foto4-480.jpg    1x,
+                    ./images/foto4-480@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="max-width: 767px"
+                />
+                <source
+                  srcset="
+                    ./images/foto4-768.jpg    1x,
+                    ./images/foto4-768@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="min-width: 768px"
+                />
+                <source
+                  srcset="
+                    ./images/foto4-1200.jpg    1x,
+                    ./images/foto4-1200@2x.jpg 2x
+                  "
+                  type="image/webp"
+                  media="min-width: 1200px"
+                />
+                <img
+                  class="section-team__img"
+                  src="./images/foto4-480.jpg"
+                  alt="Михайло Єрмаков"
+                  width="270"
+                />
+              </picture>
+
               <h3 class="section-team__name">Михайло Єрмаков</h3>
               <p class="section-team__text">UI Designer</p>
               <a
